<resources>
    <string name="app_name">TelegramProfileChallenge</string>
    <string name="profile_name">Mohamed Shaban</string>
    <string name="profile_status">online</string>
    <string name="adding_profile_photo">Adding profile photo</string>
    <string name="account">Account</string>
    <string name="phone_number">+20 102 8976618</string>
    <string name="phone_number_desc">Tap to change phone number</string>
    <string name="username">\@M7MD43BAN</string>
    <string name="username_desc">Username</string>
    <string name="bio_desc">Bio</string>
    <string name="bio">Your life is a book Don\'t be bad author</string>
    <string name="settings">Settings</string>
    <string name="notifications_and_sounds">Notifications and Sounds</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="stickers_and_emoji">Stickers and Emoji</string>
    <string name="chat_folders">Chat Folders</string>
    <string name="devices">Devices</string>
    <string name="language">Language</string>
    <string name="telegram_premium">Telegram Premium</string>
    <string name="help">Help</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="telegram_faq">Telegram FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="footer_sentence">Telegram for Android v9.2.0 (2956) store bundled arm64-v8a</string>
</resources>